--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
 install:
     - conda create --yes -n testing python=$TRAVIS_PYTHON_VERSION
     - source activate testing
-    - conda install --yes numpy=$NUMPY_VERSION nose pip numba cython
+    - conda install --yes numpy=$NUMPY_VERSION nose pip numba cython gensim pandas
 
 script:
     - ls
